# RustBitcoinWallet

./: README.md
Backend/: Cargo.toml
Backend/src/: encryption.rs  hd_wallet.rs  main.rs  multisig.rs  transaction_history.rs  transactions.rs  watch_only.rs
Backend/tests/: lib.rs
Frontend/: Cargo.toml  Trunk.toml
Frontend/static/: index.html
