[package]
name = "bitcoin_wallet"
version = "0.1.0"
edition = "2021"

bitcoin = "0.27"
rand = "0.8"

[dependencies]
aes = "0.6"
aes-gcm = "0.10"
bip32 = "0.3"
bitcoin = "0.26"
chrono = { version = "0.4", features = ["serde"] }
hkd32 = "0.6"
image = "0.24"
qrcode = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
